<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAIN" Id="{6c7239d6-f7f9-4e71-8a46-bf89f21a2b56}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	INTEG:INT;
	
	bTest : BOOL;
	tA: TON:=(PT:=T#10s);
	sVar: STRING;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[tA(IN:= bTest);
sVar := TIME_TO_STRING(tA.ET); 
AXES_CYCLE();
PIST_CYCLE();
ACTION1(sNAME:='ACTION1', PIST:=PIST1, aXY:=XY1, aLIFT:=LIFT1);
ACTION2(sNAME:='ACTION2',PIST:=PIST2, aXY:=XY2, aLIFT:=LIFT2);]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="11" Count="2" />
      <LineId Id="2" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="31" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>